--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 button {
     margin: 20px;
     height: 30px;
+    width: 100px;
     border-radius: 10px;
     color: blanchedalmond;
 }
@@ -25,11 +26,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 88vh;
+}
+
+#color {
+    width: 50px;
+    height: 50px;
 }
 
 #control-panel {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 300px;
     width: 200px;
     background-color: white;
@@ -43,3 +51,43 @@ body{
     margin: 10px;
     outline: 2px solid rgb(255, 0, 0);
 }
+
+
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  
+  /* Modal content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    text-align: center;
+  }
+  
+  /* Close button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+  }
+  
